Actually be right about the slave utils being in PATH.

--- a/master.cfg
+++ b/master.cfg
@@ -125,7 +125,7 @@ from buildbot.steps.source import Bzr
 build_sdk = factory.BuildFactory()
 build_sdk.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="devel/packaging",
                       mode="copy"))
-build_sdk.addStep(ShellCommand(command=['/home/buildbot/bin/reset-sdk']))
+build_sdk.addStep(ShellCommand(command=['reset-sdk']))
 for sdk_project in bzr_sdk_projects:
     sdk_command = "cd " + sdk_project + " && make rpm_package"
     build_sdk.addStep(ShellCommand(command=sdk_command))
