Initial Moblin build configuration, for just the app checker.

--- a/master.cfg
+++ b/master.cfg
@@ -20,7 +20,8 @@ c = BuildmasterConfig = {}
 # a tuple of bot-name and bot-password. These correspond to values given to
 # the buildslave's mktap invocation.
 from buildbot.buildslave import BuildSlave
-c['slaves'] = [BuildSlave("lfbuild-amd64", "bot1passwd", max_builds=1)]
+c['slaves'] = [BuildSlave("lfbuild-amd64", "bot1passwd", max_builds=1),
+               BuildSlave("lfbuild-moblin", "Quai8ree", max_builds=1)]
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave("bot1name", "bot1passwd", max_builds=2)]
@@ -31,7 +32,7 @@ c['slaves'] = [BuildSlave("lfbuild-amd64", "bot1passwd", max_builds=1)]
 
 c['slavePortnum'] = 9989
 
-buildslave_names = ["lfbuild-amd64"]
+lsb_buildslave_names = ["lfbuild-amd64"]
 
 ####### CHANGESOURCES
 
@@ -68,11 +69,15 @@ c['change_source'] = PBChangeSource()
 ## configure the Schedulers
 
 from buildbot import scheduler
-sch_build_sdk = scheduler.Scheduler(name="build-sdk", branch=None,
-                                    treeStableTimer=2*60,
-                                    builderNames=["build-sdk"])
+sch_lsb_sdk = scheduler.Scheduler(name="build-sdk", branch=None,
+                                  treeStableTimer=2*60,
+                                  builderNames=["build-sdk"])
 
-c['schedulers'] = [sch_build_sdk]
+sch_moblin_atk = scheduler.Nightly(name="build-moblin-atk", branch=None,
+                                   builderNames=["build-moblin-atk"],
+                                   hour=3, minute=0)
+
+c['schedulers'] = [sch_lsb_sdk, sch_moblin_atk]
 
 
 ####### BUILDERS
@@ -114,25 +119,42 @@ c['schedulers'] = [sch_build_sdk]
 #      }
 #c['builders'] = [b1]
 
-bzr_toplevel = "http://bzr.linuxfoundation.org/lsb/"
-bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++", "lsbdev-desktop",
-                    "lsbdev-qt", "lsbdev-qt3"]
-
 from buildbot.process import factory
 from buildbot.steps.shell import ShellCommand
 from buildbot.steps.source import Bzr
 
+# LSB builds
+
+lsb_bzr_toplevel = "http://bzr.linuxfoundation.org/lsb/"
+lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
+                        "lsbdev-desktop", "lsbdev-qt", "lsbdev-qt3"]
+
 build_sdk = factory.BuildFactory()
-build_sdk.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="devel/packaging",
+build_sdk.addStep(Bzr(baseURL=lsb_bzr_toplevel, 
+                      defaultBranch="devel/packaging",
                       mode="copy"))
 build_sdk.addStep(ShellCommand(command=['reset-sdk']))
-for sdk_project in bzr_sdk_projects:
+for sdk_project in lsb_bzr_sdk_projects:
     sdk_command = "cd " + sdk_project + " && make rpm_package"
     build_sdk.addStep(ShellCommand(command=sdk_command))
 
+# Moblin builds
+
+moblin_bzr_toplevel = "http://bzr.linuxfoundation.org/moblin/"
+
+build_moblin_atk = factory.BuildFactory()
+build_moblin_atk.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+                             defaultBranch="devel/app-testkit",
+                             mode="copy"))
+build_moblin_atk.addStep(ShellCommand(command="cd package && make"))
+
+# Final build configuration
+
 c['builders'] = [
-    { 'name': 'build-sdk', 'slavenames': buildslave_names,
+    { 'name': 'build-sdk', 'slavenames': lsb_buildslave_names,
       'builddir': 'build-sdk', 'factory': build_sdk }
+    { 'name': 'build-moblin-atk', 'slavenames': ['lfbuild-moblin'],
+      'builddir': 'build-moblin', 'factory': build_moblin_atk }
 ]
 
 
