Fix oopses and gotchas.

--- a/master.cfg
+++ b/master.cfg
@@ -144,7 +144,7 @@ moblin_bzr_toplevel = "http://bzr.linuxfoundation.org/moblin/"
 
 build_moblin_atk = factory.BuildFactory()
 build_moblin_atk.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-                             defaultBranch="devel/app-testkit",
+                             defaultBranch="devel/app-checker",
                              mode="copy"))
 build_moblin_atk.addStep(ShellCommand(command="cd package && make"))
 
@@ -152,7 +152,7 @@ build_moblin_atk.addStep(ShellCommand(command="cd package && make"))
 
 c['builders'] = [
     { 'name': 'build-sdk', 'slavenames': lsb_buildslave_names,
-      'builddir': 'build-sdk', 'factory': build_sdk }
+      'builddir': 'build-sdk', 'factory': build_sdk },
     { 'name': 'build-moblin-atk', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin', 'factory': build_moblin_atk }
 ]
