Turn off Debian package building for Moblin.

--- a/master.cfg
+++ b/master.cfg
@@ -142,11 +142,17 @@ for sdk_project in lsb_bzr_sdk_projects:
 
 moblin_bzr_toplevel = "http://bzr.linuxfoundation.org/moblin/"
 
+# Until we figure out how to get alien and fakeroot into the
+# Moblin environment, disable deb packages.
+
+buildnodeb = {'BUILD_NO_DEB': 'true'}
+
 build_moblin_atk = factory.BuildFactory()
 build_moblin_atk.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
                              defaultBranch="devel/app-checker",
                              mode="copy"))
-build_moblin_atk.addStep(ShellCommand(command="cd package && make"))
+build_moblin_atk.addStep(ShellCommand(command="cd package && make",
+                                      env=buildnodeb))
 
 # Final build configuration
 
