Add steps to gather the build results.

--- a/master.cfg
+++ b/master.cfg
@@ -151,8 +151,10 @@ build_moblin_atk = factory.BuildFactory()
 build_moblin_atk.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
                              defaultBranch="devel/app-checker",
                              mode="copy"))
-build_moblin_atk.addStep(ShellCommand(command="cd package && make",
-                                      env=buildnodeb))
+build_moblin_atk.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1"))
+build_moblin_atk.addStep(ShellCommand(command=['rm', '-rf', '../../moblin-results/app-checker']))
+build_moblin_atk.addStep(ShellCommand(command=['mkdir', '-p', '../../moblin-results/app-checker']))
+build_moblin_atk.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/app-checker'))
 
 # Final build configuration
 
@@ -160,7 +162,7 @@ c['builders'] = [
     { 'name': 'build-sdk', 'slavenames': lsb_buildslave_names,
       'builddir': 'build-sdk', 'factory': build_sdk },
     { 'name': 'build-moblin-atk', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin', 'factory': build_moblin_atk }
+      'builddir': 'build-moblin-appchk', 'factory': build_moblin_atk }
 ]
 
 
