Cleanup; atk -> appchk, etc.

--- a/master.cfg
+++ b/master.cfg
@@ -73,11 +73,11 @@ sch_lsb_sdk = scheduler.Scheduler(name="build-sdk", branch=None,
                                   treeStableTimer=2*60,
                                   builderNames=["build-sdk"])
 
-sch_moblin_atk = scheduler.Nightly(name="build-moblin-atk", branch=None,
-                                   builderNames=["build-moblin-atk"],
-                                   hour=3, minute=0)
+sch_moblin_appchk = scheduler.Nightly(name="build-moblin-appchk", branch=None,
+                                      builderNames=["build-moblin-appchk"],
+                                      hour=3, minute=0)
 
-c['schedulers'] = [sch_lsb_sdk, sch_moblin_atk]
+c['schedulers'] = [sch_lsb_sdk, sch_moblin_appchk]
 
 
 ####### BUILDERS
@@ -142,27 +142,22 @@ for sdk_project in lsb_bzr_sdk_projects:
 
 moblin_bzr_toplevel = "http://bzr.linuxfoundation.org/moblin/"
 
-# Until we figure out how to get alien and fakeroot into the
-# Moblin environment, disable deb packages.
-
-buildnodeb = {'BUILD_NO_DEB': 'true'}
-
-build_moblin_atk = factory.BuildFactory()
-build_moblin_atk.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-                             defaultBranch="devel/app-checker",
-                             mode="copy"))
-build_moblin_atk.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1"))
-build_moblin_atk.addStep(ShellCommand(command=['rm', '-rf', '../../moblin-results/app-checker']))
-build_moblin_atk.addStep(ShellCommand(command=['mkdir', '-p', '../../moblin-results/app-checker']))
-build_moblin_atk.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/app-checker'))
+build_moblin_appchk = factory.BuildFactory()
+build_moblin_appchk.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+                                defaultBranch="devel/app-checker",
+                                mode="copy"))
+build_moblin_appchk.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1"))
+build_moblin_appchk.addStep(ShellCommand(command=['rm', '-rf', '../../moblin-results/app-checker']))
+build_moblin_appchk.addStep(ShellCommand(command=['mkdir', '-p', '../../moblin-results/app-checker']))
+build_moblin_appchk.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/app-checker'))
 
 # Final build configuration
 
 c['builders'] = [
     { 'name': 'build-sdk', 'slavenames': lsb_buildslave_names,
       'builddir': 'build-sdk', 'factory': build_sdk },
-    { 'name': 'build-moblin-atk', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin-appchk', 'factory': build_moblin_atk }
+    { 'name': 'build-moblin-appchk', 'slavenames': ['lfbuild-moblin'],
+      'builddir': 'build-moblin-appchk', 'factory': build_moblin_appchk }
 ]
 
 
