Add identical jobs for dist-checker and osv-tools.

--- a/master.cfg
+++ b/master.cfg
@@ -141,24 +141,31 @@ for sdk_project in lsb_bzr_sdk_projects:
 # Moblin builds
 
 moblin_bzr_toplevel = "http://bzr.linuxfoundation.org/moblin/"
+moblin_projects = ['app-checker', 'distribution-checker', 'moblin-osv-tests']
 
-build_moblin_appchk = factory.BuildFactory()
-build_moblin_appchk.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-                                defaultBranch="devel/app-checker",
-                                mode="copy"))
-build_moblin_appchk.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1"))
-build_moblin_appchk.addStep(ShellCommand(command=['rm', '-rf', '../../moblin-results/app-checker']))
-build_moblin_appchk.addStep(ShellCommand(command=['mkdir', '-p', '../../moblin-results/app-checker']))
-build_moblin_appchk.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/app-checker'))
+builders = {}
+for prj in moblin_projects:
+    builder = factory.BuildFactory()
+    builders[prj] = builder
+
+    builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+                        defaultBranch="devel/" + prj,
+                        mode="copy"))
+    builder.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1"))
+    builder.addStep(ShellCommand(command=['rm', '-rf', '../../moblin-results/' + prj]))
+    builder.addStep(ShellCommand(command=['mkdir', '-p', '../../moblin-results/' + prj]))
+    builder.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/' + prj))
 
 # Final build configuration
 
 c['builders'] = [
     { 'name': 'build-sdk', 'slavenames': lsb_buildslave_names,
       'builddir': 'build-sdk', 'factory': build_sdk },
-    { 'name': 'build-moblin-appchk', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin-appchk', 'factory': build_moblin_appchk }
 ]
+for prj in moblin_projects:
+    c['builders'].append(
+        { 'name': 'build-moblin-' + prj, 'slavenames': ['lfbuild-moblin'],
+          'builddir': 'build-moblin-' + prj, 'factory': builders[prj] })
 
 
 ####### STATUS TARGETS
