Fix scheduler creation for Moblin.

--- a/master.cfg
+++ b/master.cfg
@@ -9,6 +9,14 @@
 # dictionary has a variety of keys to control different aspects of the
 # buildmaster. They are documented in docs/config.xhtml .
 
+# Toplevel configuration, used by the builder/scheduler setup.
+
+lsb_bzr_toplevel = "http://bzr.linuxfoundation.org/lsb/"
+lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
+                        "lsbdev-desktop", "lsbdev-qt", "lsbdev-qt3"]
+
+moblin_bzr_toplevel = "http://bzr.linuxfoundation.org/moblin/"
+moblin_projects = ['app-checker', 'distribution-checker', 'moblin-osv-tests']
 
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
@@ -73,12 +81,13 @@ sch_lsb_sdk = scheduler.Scheduler(name="build-sdk", branch=None,
                                   treeStableTimer=2*60,
                                   builderNames=["build-sdk"])
 
-sch_moblin_appchk = scheduler.Nightly(name="build-moblin-appchk", branch=None,
-                                      builderNames=["build-moblin-appchk"],
-                                      hour=3, minute=0)
+c['schedulers'] = [sch_lsb_sdk]
 
-c['schedulers'] = [sch_lsb_sdk, sch_moblin_appchk]
-
+for prj in moblin_projects:
+    sch = scheduler.Nightly(name="build-moblin-" + prj, branch=None,
+                            builderNames=["build-moblin-" + prj],
+                            hour=3, minute=0)
+    c['schedulers'].append(sch)
 
 ####### BUILDERS
 
@@ -125,10 +134,6 @@ from buildbot.steps.source import Bzr
 
 # LSB builds
 
-lsb_bzr_toplevel = "http://bzr.linuxfoundation.org/lsb/"
-lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
-                        "lsbdev-desktop", "lsbdev-qt", "lsbdev-qt3"]
-
 build_sdk = factory.BuildFactory()
 build_sdk.addStep(Bzr(baseURL=lsb_bzr_toplevel, 
                       defaultBranch="devel/packaging",
@@ -139,9 +144,6 @@ for sdk_project in lsb_bzr_sdk_projects:
     build_sdk.addStep(ShellCommand(command=sdk_command))
 
 # Moblin builds
-
-moblin_bzr_toplevel = "http://bzr.linuxfoundation.org/moblin/"
-moblin_projects = ['app-checker', 'distribution-checker', 'moblin-osv-tests']
 
 builders = {}
 for prj in moblin_projects:
