Redo the moblin-osv-tests build to fit its build process.

--- a/master.cfg
+++ b/master.cfg
@@ -16,7 +16,14 @@ lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
                         "lsbdev-desktop", "lsbdev-qt", "lsbdev-qt3"]
 
 moblin_bzr_toplevel = "http://bzr.linuxfoundation.org/moblin/"
-moblin_projects = ['app-checker', 'distribution-checker', 'moblin-osv-tests']
+moblin_projects = ['app-checker', 'distribution-checker']
+moblin_osv_tests_projects = ["moblin-test-kernel", "m2ct_test_reports",
+                             "moblin-test-media", "moblin-test-browser",
+                             "moblin-test-package-management", 
+                             "moblin-test-desktop", 
+                             "moblin-test-package-version", 
+                             "moblin-test-graphics", "moblin-test-perf-power"]
+
 
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
@@ -80,8 +87,12 @@ from buildbot import scheduler
 sch_lsb_sdk = scheduler.Scheduler(name="build-sdk", branch=None,
                                   treeStableTimer=2*60,
                                   builderNames=["build-sdk"])
+sch_moblin_osv_tests = scheduler.Scheduler(name="build-moblin-osv-tests", 
+                                           branch=None,
+                                           treeStableTimer=2*60,
+                                           builderNames=["build-moblin-osv-tests"])
 
-c['schedulers'] = [sch_lsb_sdk]
+c['schedulers'] = [sch_lsb_sdk, sch_moblin_osv_tests]
 
 for prj in moblin_projects:
     sch = scheduler.Nightly(name="build-moblin-" + prj, branch=None,
@@ -158,11 +169,23 @@ for prj in moblin_projects:
     builder.addStep(ShellCommand(command=['mkdir', '-p', '../../moblin-results/' + prj]))
     builder.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/' + prj))
 
+osv_tests_builder = factory.BuildFactory()
+osv_tests_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+                              defaultBranch="devel/" + prj,
+                              mode="copy"))
+osv_tests_builder.addStep(ShellCommand(command=['rm', '-rf', '../../moblin-results/moblin_osv_tests']))
+osv_tests_builder.addStep(ShellCommand(command=['mkdir', '-p', '../../moblin-results/moblin_osv_tests']))
+for prj in moblin_osv_tests_projects:
+    osv_tests_builder.addStep(ShellCommand(command="cd %s/package && ./pack.sh" % prj))
+    osv_tests_builder.addStep(ShellCommand(command='cp %s/package/*.rpm ../../moblin-results/moblin_osv_tests' % prj))
+
 # Final build configuration
 
 c['builders'] = [
     { 'name': 'build-sdk', 'slavenames': lsb_buildslave_names,
       'builddir': 'build-sdk', 'factory': build_sdk },
+    { 'name': 'build-moblin-osv-tests', 'slavenames': ['lfbuild-moblin'],
+      'builddir': 'build-moblin-osv-tests', 'factory': osv_tests_builder },
 ]
 for prj in moblin_projects:
     c['builders'].append(
