Use correct bzr repo for moblin-osv-tests.

--- a/master.cfg
+++ b/master.cfg
@@ -171,7 +171,7 @@ for prj in moblin_projects:
 
 osv_tests_builder = factory.BuildFactory()
 osv_tests_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-                              defaultBranch="devel/" + prj,
+                              defaultBranch="devel/moblin-osv-tests",
                               mode="copy"))
 osv_tests_builder.addStep(ShellCommand(command=['rm', '-rf', '../../moblin-results/moblin_osv_tests']))
 osv_tests_builder.addStep(ShellCommand(command=['mkdir', '-p', '../../moblin-results/moblin_osv_tests']))
