--- a/master.cfg
+++ b/master.cfg
@@ -17,8 +17,8 @@ lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
 
 moblin_bzr_toplevel = "http://bzr.linuxfoundation.org/moblin/"
 moblin_projects = ['app-checker', 'distribution-checker']
-moblin_osv_tests_projects = ["moblin-test-kernel", "m2ct_test_reports",
-                             "moblin-test-media", "moblin-test-browser",
+moblin_osv_tests_projects = ["moblin-test-kernel", "moblin-test-media", 
+                             "moblin-test-browser",
                              "moblin-test-package-management", 
                              "moblin-test-desktop", 
                              "moblin-test-package-version", 
@@ -84,21 +84,27 @@ c['change_source'] = PBChangeSource()
 ## configure the Schedulers
 
 from buildbot import scheduler
+
 sch_lsb_sdk = scheduler.Scheduler(name="build-sdk", branch=None,
                                   treeStableTimer=2*60,
                                   builderNames=["build-sdk"])
-sch_moblin_osv_tests = scheduler.Scheduler(name="build-moblin-osv-tests", 
-                                           branch=None,
-                                           treeStableTimer=2*60,
-                                           builderNames=["build-moblin-osv-tests"])
 
-c['schedulers'] = [sch_lsb_sdk, sch_moblin_osv_tests]
+sch_moblin_osv_tests = \
+    scheduler.Nightly(name="build-moblin-osv-tests", branch=None,
+                      builderNames=["build-moblin-osv-tests"],
+                      hour=3, minute=0)
+sch_moblin_app_checker = \
+    scheduler.Nightly(name="build-moblin-app-checker", branch=None,
+                      builderNames=["build-moblin-app-checker"],
+                      hour=3, minute=0)
+sch_moblin_distribution_checker = \
+    scheduler.Nightly(name="build-moblin-distribution-checker", branch=None,
+                      builderNames=["build-moblin-distribution-checker"],
+                      hour=3, minute=0)
 
-for prj in moblin_projects:
-    sch = scheduler.Nightly(name="build-moblin-" + prj, branch=None,
-                            builderNames=["build-moblin-" + prj],
-                            hour=3, minute=0)
-    c['schedulers'].append(sch)
+c['schedulers'] = [sch_lsb_sdk, sch_moblin_osv_tests, sch_moblin_app_checker,
+                   sch_moblin_distribution_checker]
+
 
 ####### BUILDERS
 
@@ -163,21 +169,37 @@ for prj in moblin_projects:
 
     builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
                         defaultBranch="devel/" + prj,
-                        mode="copy"))
-    builder.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1"))
-    builder.addStep(ShellCommand(command=['rm', '-rf', '../../moblin-results/' + prj]))
-    builder.addStep(ShellCommand(command=['mkdir', '-p', '../../moblin-results/' + prj]))
-    builder.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/' + prj))
+                        mode="copy", timeout=60*60))
+    builder.addStep(ShellCommand(command=['rm', '-rf', 
+                                          '../../moblin-results/' + prj],
+                                 name="copypkg1"))
+    builder.addStep(ShellCommand(command=['mkdir', '-p', 
+                                          '../../moblin-results/' + prj],
+                                 name="copypkg2"))
+    builder.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1",
+                                 name="build", timeout=60*60))
+    builder.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/' + prj,
+                                 name="copypkg3"))
 
 osv_tests_builder = factory.BuildFactory()
 osv_tests_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
                               defaultBranch="devel/moblin-osv-tests",
-                              mode="copy"))
-osv_tests_builder.addStep(ShellCommand(command=['rm', '-rf', '../../moblin-results/moblin_osv_tests']))
-osv_tests_builder.addStep(ShellCommand(command=['mkdir', '-p', '../../moblin-results/moblin_osv_tests']))
+                              mode="copy", timeout=60*60))
+osv_tests_builder.addStep(
+    ShellCommand(command=['rm', '-rf', 
+                          '../../moblin-results/moblin_osv_tests'],
+                 name="copypkgs1"))
+osv_tests_builder.addStep(
+    ShellCommand(command=['mkdir', '-p', 
+                          '../../moblin-results/moblin_osv_tests'],
+                 name="copypkgs2"))
 for prj in moblin_osv_tests_projects:
-    osv_tests_builder.addStep(ShellCommand(command="cd %s/package && ./pack.sh" % prj))
-    osv_tests_builder.addStep(ShellCommand(command='cp %s/package/*.rpm ../../moblin-results/moblin_osv_tests' % prj))
+    osv_tests_builder.addStep(
+        ShellCommand(command="cd %s/package && ./pack.sh" % prj,
+                     name="build_" + prj))
+    osv_tests_builder.addStep(
+        ShellCommand(command='cp %s/package/*.rpm ../../moblin-results/moblin_osv_tests' % prj,
+                     name="copypkgs_" + prj))
 
 # Final build configuration
 
@@ -244,8 +266,8 @@ c['status'].append(html.WebStatus(http_port=8010, allowForce=True))
 # waterfall HTML page. The 'projectURL' string will be used to provide a link
 # from buildbot HTML pages to your project's home page.
 
-c['projectName'] = "LSB"
-c['projectURL'] = "http://www.linuxbase.org/"
+c['projectName'] = "Linux Foundation"
+c['projectURL'] = "http://www.linuxfoundation.org/"
 
 # the 'buildbotURL' string should point to the location where the buildbot's
 # internal web server (usually the html.Waterfall page) is visible. This
