Do the checkouts for all app-checker sub-projects.

--- a/master.cfg
+++ b/master.cfg
@@ -16,7 +16,6 @@ lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
                         "lsbdev-desktop", "lsbdev-qt", "lsbdev-qt3"]
 
 moblin_bzr_toplevel = "http://bzr.linuxfoundation.org/moblin/"
-moblin_projects = ['app-checker', 'distribution-checker']
 moblin_osv_tests_projects = ["moblin-test-kernel", "moblin-test-media", 
                              "moblin-test-browser",
                              "moblin-test-package-management", 
@@ -162,24 +161,48 @@ for sdk_project in lsb_bzr_sdk_projects:
 
 # Moblin builds
 
-builders = {}
-for prj in moblin_projects:
-    builder = factory.BuildFactory()
-    builders[prj] = builder
+app_checker_builder = factory.BuildFactory()
+app_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+                    defaultBranch="devel/app-checker",
+                    mode="update", timeout=60*60, workdir="app-checker"))
+app_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+                    defaultBranch="devel/moblin-isv-tests",
+                    mode="update", timeout=60*60, workdir="moblin-isv-tests"))
+app_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+                    defaultBranch="devel/misc-test",
+                    mode="update", timeout=60*60, workdir="misc-test"))
+app_checker_builder.addStep(ShellCommand(command=['rm', '-rf', 
+                                      '../../moblin-results/app-checker'],
+                                         name="copypkg1", 
+                                         workdir="app-checker"))
+app_checker_builder.addStep(ShellCommand(command=['mkdir', '-p', 
+                                      '../../moblin-results/app-checker'],
+                                         name="copypkg2",
+                                         workdir="app-checker"))
+app_checker_builder.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1 BZRTREES=../..",
+                                         name="build",
+                                         workdir="app-checker"))
+app_checker_builder.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/app-checker',
+                                         name="copypkg3",
+                                         workdir="app-checker"))
+app_checker_builder.addStep(ShellCommand(command="cd package && make clean",
+                                         name="clean",
+                                         workdir="app-checker"))
 
-    builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-                        defaultBranch="devel/" + prj,
-                        mode="copy", timeout=60*60))
-    builder.addStep(ShellCommand(command=['rm', '-rf', 
-                                          '../../moblin-results/' + prj],
-                                 name="copypkg1"))
-    builder.addStep(ShellCommand(command=['mkdir', '-p', 
-                                          '../../moblin-results/' + prj],
-                                 name="copypkg2"))
-    builder.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1",
-                                 name="build", timeout=60*60))
-    builder.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/' + prj,
-                                 name="copypkg3"))
+dist_checker_builder = factory.BuildFactory()
+dist_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
+                                 defaultBranch="devel/distribution-checker",
+                                 mode="copy", timeout=60*60))
+dist_checker_builder.addStep(ShellCommand(command=['rm', '-rf', 
+                                                   '../../moblin-results/distribution-checker'],
+                                          name="copypkg1"))
+dist_checker_builder.addStep(ShellCommand(command=['mkdir', '-p', 
+                                                   '../../moblin-results/distribution-checker'],
+                                          name="copypkg2"))
+dist_checker_builder.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1",
+                                          name="build", timeout=60*60))
+dist_checker_builder.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/distribution-checker',
+                                          name="copypkg3"))
 
 osv_tests_builder = factory.BuildFactory()
 osv_tests_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
@@ -208,11 +231,13 @@ c['builders'] = [
       'builddir': 'build-sdk', 'factory': build_sdk },
     { 'name': 'build-moblin-osv-tests', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-osv-tests', 'factory': osv_tests_builder },
+    { 'name': 'build-moblin-app-checker', 'slavenames': ['lfbuild-moblin'],
+      'builddir': 'build-moblin-app-checker', 'factory': app_checker_builder },
+    { 'name': 'build-moblin-distribution-checker', 
+      'slavenames': ['lfbuild-moblin'],
+      'builddir': 'build-moblin-distribution-checker', 
+      'factory': dist_checker_builder }
 ]
-for prj in moblin_projects:
-    c['builders'].append(
-        { 'name': 'build-moblin-' + prj, 'slavenames': ['lfbuild-moblin'],
-          'builddir': 'build-moblin-' + prj, 'factory': builders[prj] })
 
 
 ####### STATUS TARGETS
