Add job to transfer the results to the master.

--- a/master.cfg
+++ b/master.cfg
@@ -88,21 +88,19 @@ sch_lsb_sdk = scheduler.Scheduler(name="build-sdk", branch=None,
                                   treeStableTimer=2*60,
                                   builderNames=["build-sdk"])
 
-sch_moblin_osv_tests = \
+sch_moblin_builds = \
     scheduler.Nightly(name="build-moblin-osv-tests", branch=None,
-                      builderNames=["build-moblin-osv-tests"],
-                      hour=3, minute=0)
-sch_moblin_app_checker = \
-    scheduler.Nightly(name="build-moblin-app-checker", branch=None,
-                      builderNames=["build-moblin-app-checker"],
-                      hour=3, minute=0)
-sch_moblin_distribution_checker = \
-    scheduler.Nightly(name="build-moblin-distribution-checker", branch=None,
-                      builderNames=["build-moblin-distribution-checker"],
+                      builderNames=["build-moblin-osv-tests",
+                                    "build-moblin-app-checker",
+                                    "build-moblin-distribution-checker"],
                       hour=3, minute=0)
 
-c['schedulers'] = [sch_lsb_sdk, sch_moblin_osv_tests, sch_moblin_app_checker,
-                   sch_moblin_distribution_checker]
+sch_moblin_results = \
+    scheduler.Nightly(name="build-moblin-results", branch=None,
+                      builderNames=["build-moblin-results"],
+                      hour=4, minute=0)
+
+c['schedulers'] = [sch_lsb_sdk, sch_moblin_builds, sch_moblin_results]
 
 
 ####### BUILDERS
@@ -224,6 +222,13 @@ for prj in moblin_osv_tests_projects:
         ShellCommand(command='cp %s/package/*.rpm ../../moblin-results/moblin_osv_tests' % prj,
                      name="copypkgs_" + prj))
 
+results_builder = factory.BuildFactory()
+results_builder.addStep(ShellCommand(command=["tar", "czf", 
+                                              "moblin-results.tar.gz", "."], 
+                                     name="tar"))
+results_builder.addStep(FileUpload(slavesrc="moblin-results.tar.gz", 
+                                   masterdest="~/moblin-results.tar.gz"))
+
 # Final build configuration
 
 c['builders'] = [
@@ -236,7 +241,9 @@ c['builders'] = [
     { 'name': 'build-moblin-distribution-checker', 
       'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-distribution-checker', 
-      'factory': dist_checker_builder }
+      'factory': dist_checker_builder },
+    { 'name': 'build-moblin-results', 'slavenames': ['lfbuild-moblin'],
+      'builddir': 'moblin-results', 'factory': results_builder },
 ]
 
 
