Get the upload working.

--- a/master.cfg
+++ b/master.cfg
@@ -145,6 +145,7 @@ c['schedulers'] = [sch_lsb_sdk, sch_moblin_builds, sch_moblin_results]
 from buildbot.process import factory
 from buildbot.steps.shell import ShellCommand
 from buildbot.steps.source import Bzr
+from buildbot.steps.transfer import FileUpload
 
 # LSB builds
 
@@ -224,10 +225,11 @@ for prj in moblin_osv_tests_projects:
 
 results_builder = factory.BuildFactory()
 results_builder.addStep(ShellCommand(command=["tar", "czf", 
-                                              "moblin-results.tar.gz", "."], 
+                                              "moblin-results.tar.gz", 
+                                              "../../moblin-results"], 
                                      name="tar"))
 results_builder.addStep(FileUpload(slavesrc="moblin-results.tar.gz", 
-                                   masterdest="~/moblin-results.tar.gz"))
+                                   masterdest="moblin-results.tar.gz"))
 
 # Final build configuration
 
@@ -243,7 +245,7 @@ c['builders'] = [
       'builddir': 'build-moblin-distribution-checker', 
       'factory': dist_checker_builder },
     { 'name': 'build-moblin-results', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'moblin-results', 'factory': results_builder },
+      'builddir': 'build-moblin-results', 'factory': results_builder },
 ]
 
 
