Switch the URL for the buildbot web front end to the final one.

--- a/master.cfg
+++ b/master.cfg
@@ -309,4 +309,4 @@ c['projectURL'] = "http://www.linuxfoundation.org/"
 # with an externally-visible host name which the buildbot cannot figure out
 # without some help.
 
-c['buildbotURL'] = "http://lfdev-x8664.linuxfoundation.org/buildbot/"
+c['buildbotURL'] = "http://dev.linuxfoundation.org/buildbot/"
