Save LSB build results.

--- a/master.cfg
+++ b/master.cfg
@@ -154,9 +154,20 @@ build_sdk.addStep(Bzr(baseURL=lsb_bzr_toplevel,
                       defaultBranch="devel/packaging",
                       mode="copy"))
 build_sdk.addStep(ShellCommand(command=['reset-sdk']))
+build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
+                                        "../sdk-results"]))
 for sdk_project in lsb_bzr_sdk_projects:
+    build_sdk.addStep(ShellCommand(command=['mkdir', '-p', 
+                                            '../sdk-results/' + sdk_project]))
     sdk_command = "cd " + sdk_project + " && make rpm_package"
     build_sdk.addStep(ShellCommand(command=sdk_command))
+    build_sdk.addStep(
+        ShellCommand(command="cp %s/*.rpm ../sdk-results/%s" 
+                     % (sdk_project, sdk_project)))
+build_sdk.addStep(ShellCommand(command=['tar', 'czf', '../sdk-results.tar.gz',
+                                        '../sdk-results']))
+build_sdk.addStep(FileUpload(slavesrc="../sdk-results.tar.gz", 
+                             masterdest="lsb-sdk-results.tar.gz"))
 
 # Moblin builds
 
@@ -230,6 +241,8 @@ results_builder.addStep(ShellCommand(command=["tar", "czf",
                                      name="tar"))
 results_builder.addStep(FileUpload(slavesrc="moblin-results.tar.gz", 
                                    masterdest="moblin-results.tar.gz"))
+results_builder.addStep(ShellCommand(command=["rm", "-rf", 
+                                              "../../moblin-results"]))
 
 # Final build configuration
 
