Add job to update the installed SDK for LSB.

--- a/master.cfg
+++ b/master.cfg
@@ -87,6 +87,9 @@ from buildbot import scheduler
 sch_lsb_sdk = scheduler.Scheduler(name="build-sdk", branch=None,
                                   treeStableTimer=2*60,
                                   builderNames=["build-sdk"])
+sch_update_lsb_sdk = scheduler.Dependent(name="update-sdk",
+                                         upstream=sch_lsb_sdk,
+                                         builderNames=["update-sdk"])
 
 sch_moblin_builds = \
     scheduler.Nightly(name="build-moblin-osv-tests", branch=None,
@@ -169,6 +172,10 @@ build_sdk.addStep(ShellCommand(command=['tar', 'czf', '../sdk-results.tar.gz',
 build_sdk.addStep(FileUpload(slavesrc="../sdk-results.tar.gz", 
                              masterdest="lsb-sdk-results.tar.gz"))
 
+update_sdk = factory.BuildFactory()
+update_sdk.addStep(ShellCommand(command=['update-sdk', 
+                                         '../../build-sdk/sdk-results']))
+
 # Moblin builds
 
 app_checker_builder = factory.BuildFactory()
@@ -249,6 +256,8 @@ results_builder.addStep(ShellCommand(command=["rm", "-rf",
 c['builders'] = [
     { 'name': 'build-sdk', 'slavenames': lsb_buildslave_names,
       'builddir': 'build-sdk', 'factory': build_sdk },
+    { 'name': 'update-sdk', 'slavenames': lsb_buildslave_names,
+      'builddir': 'update-sdk', 'factory': update_sdk },
     { 'name': 'build-moblin-osv-tests', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-osv-tests', 'factory': osv_tests_builder },
     { 'name': 'build-moblin-app-checker', 'slavenames': ['lfbuild-moblin'],
