Forgot to add the update scheduler to the schedulers list.

--- a/master.cfg
+++ b/master.cfg
@@ -103,7 +103,8 @@ sch_moblin_results = \
                       builderNames=["build-moblin-results"],
                       hour=4, minute=0)
 
-c['schedulers'] = [sch_lsb_sdk, sch_moblin_builds, sch_moblin_results]
+c['schedulers'] = [sch_lsb_sdk, sch_update_lsb_sdk, 
+                   sch_moblin_builds, sch_moblin_results]
 
 
 ####### BUILDERS
