Clean up LSB command names; add an arch qualifier for the SDK tarball.

--- a/master.cfg
+++ b/master.cfg
@@ -157,21 +157,27 @@ build_sdk = factory.BuildFactory()
 build_sdk.addStep(Bzr(baseURL=lsb_bzr_toplevel, 
                       defaultBranch="devel/packaging",
                       mode="copy"))
-build_sdk.addStep(ShellCommand(command=['reset-sdk']))
+build_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk"))
 build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
-                                        "../sdk-results"]))
+                                        "../sdk-results"],
+                               name="rm-old-results"))
 for sdk_project in lsb_bzr_sdk_projects:
     build_sdk.addStep(ShellCommand(command=['mkdir', '-p', 
-                                            '../sdk-results/' + sdk_project]))
+                                            '../sdk-results/' + sdk_project],
+                                   name="mkdir_" + sdk_project))
     sdk_command = "cd " + sdk_project + " && make rpm_package"
-    build_sdk.addStep(ShellCommand(command=sdk_command))
+    build_sdk.addStep(ShellCommand(command=sdk_command,
+                                   name="build_" + sdk_project))
     build_sdk.addStep(
         ShellCommand(command="cp %s/*.rpm ../sdk-results/%s" 
-                     % (sdk_project, sdk_project)))
+                             % (sdk_project, sdk_project),
+                     name="copy_" + sdk_project))
 build_sdk.addStep(ShellCommand(command=['tar', 'czf', '../sdk-results.tar.gz',
-                                        '../sdk-results']))
+                                        '../sdk-results'],
+                               name="pack-sdk"))
 build_sdk.addStep(FileUpload(slavesrc="../sdk-results.tar.gz", 
-                             masterdest="lsb-sdk-results.tar.gz"))
+                             masterdest="lsb-sdk-results-%s.tar.gz" 
+                                         % os.uname()[-1]))
 
 update_sdk = factory.BuildFactory()
 update_sdk.addStep(ShellCommand(command=['update-sdk', 
